# fastapi-project

./: .pre-commit-config.yaml  README.md  aerich.ini  pyproject.toml  run.py  run_tests.sh
backend/: auth.py  config.py  init.py  main.py
backend/admin/: admin_router.py  profile_views.py  user_views.py
backend/app/: routers.py
backend/app/admin/: admin_router.py
backend/app/admin/api/: posts_views.py  profile_views.py  user_views.py
backend/app/auth/: jwt.py  permissions.py  shemas.py  token_routes.py
backend/app/aws_service/: s3_utils.py
backend/app/celery/: celery_views.py  schemas.py  tasks.py
backend/app/chat/: base_service.py  mixins.py  schemas.py  services.py  websockets.py
backend/app/posts/: models.py  posts_router.py  schemas.py
backend/app/users/: models.py  schemas.py  users_router.py  utils.py
backend/config/: settings.py  tortoise_conf.py
backend/users/: models.py  schemas.py  views.py
migrations/models/: 0_20210725132539_init.sql  1_20210725150911_update.sql  2_20210725153548_update.sql  3_20210731182257_update.sql  4_20210731182659_update.sql  5_20210805134816_update.sql  6_20210805200348_update.sql  7_20210807221941_update.sql  8_20210808164147_update.sql
tests/: conftest.py  fixtures.py  utils.py
tests/auth/: setup.py
tests/test_admin/: test_profile.py  test_users.py
tests/test_admin_actions/: test_posts.py  test_profile.py  test_users.py
tests/test_celery/: test_celery_tasks.py
tests/test_chat_actions/: test_chat.py
tests/test_user_actions/: test_posts.py  test_profile.py  test_user.py
(+5 files in other folders)
