[tool.poetry]
name = "fastapi-tortoise"
version = "0.1.0"
description = ""
authors = ["ivanyolgin <yolginivan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.14.0"
PyJWT = "^2.1.0"
passlib = "^1.7.4"
tortoise = "^0.1.1"
python-dotenv = "^0.19.0"
fastapi = "^0.67.0"
tortoise-orm = "^0.17.5"
python-multipart = "^0.0.5"
asyncpg = "^0.23.0"
bcrypt = "^3.2.0"
aerich = "^0.5.4"
pytest = "^6.2.4"
requests = "^2.26.0"
astroid = "^2.6.5"
pylint = "^2.9.6"
asynctest = "^0.13.0"
fastapi-mail = "^0.4.0"
pre-commit = "^2.13.0"
fastapi-pagination = "^0.8.3"
aiobotocore = "^1.3.3"
celery = "4.4.7"
redis = "^3.5.3"
fastapi-cache2 = "^0.1.6"
websockets = "^9.1"
motor = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.idea
  | \.pytest_cache
  | \migrations
  | _build
  | buck-out
  | build
  | dist

)/
'''